# final-project-revou-be

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  blank.py  config.py  docker-entrypoint.sh  fly.toml  json_encoder.py  pyproject.toml  requirements.txt  schemas-legacy.py  schemas.py
controllers/: __init__.py  collection.py  comment.py  feed.py  following.py  instruction.py  like.py  rate.py  recipe.py  user.py  user_social.py
controllers/controllers-legacy/: instruction.py
migrations/: alembic.ini
migrations-legacy/versions/: 2024_05_10_1949-2fab08a3cea0_reinitialize.py
migrations-legacy/versions-legacy/: 1782683a6375_add_nutriscore.py  e4b42b336d05_connect_instruction_into_recipe_directly.py  ee46e593edbb_change_type_of_columns_in_recipe.py
migrations/versions/: 08f6351e240a_add_unique_property_to_instruction_model.py  2024_04_18_2141-510bde5a50bc_.py  2024_04_18_2230-051fdcaff5a0_.py  2024_04_19_1442-de6fc10ec169_add_view_count_on_user_and_recipe.py  2024_04_19_2207-6debdf1bff47_initial.py  2024_04_19_2238-5a138ef53671_reinitialize.py  (+6 more)
models/: __init__.py  comment.py  cooking_tool.py  following.py  food_category.py  food_group.py  food_origin.py  food_type.py  ingredient.py  ingredient_group.py  ingredient_group_relation.py  instruction.py  like.py  nutrition.py  rate.py  recipe.py  recipe_attachment.py  recipe_category_relation.py  recipe_ingredient_relation.py  recipe_instruction_relation.py  recipe_origin_relation.py  recipe_tag_relation.py  recipe_tool_relation.py  recipe_type_relation.py  tag.py  user.py  user_social.py
schemas/: __init__.py  interactionschema.py  recipeschema.py  socialschema.py  toolschema.py  userschema.py
utils/: __init__.py  feed_helpers.py  recipe_helpers.py  user_helpers.py
(+16 files in other folders)
