[tool.poetry]
name = "final-project-be"
version = "0.0.1"
description = "Healthy Recipe"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-smorest = "^0.44.0"
docopt = "^0.6.2"
cerberus = "^1.3.5"
google-auth = "^2.29.0"
idna = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
